// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test should validate edit mode snapshot 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="StyledProps--font StyledProps--main main"
        >
          <div
            class="InputWithIdentifier--txtNameContainer TextInput--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
            >
              <div
                class="Text--withDocsTooltip"
                data-tooltip-id="universalInputNameWithId"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  Id
                </p>
              </div>
              <p
                class="StyledProps--font StyledProps--main"
              >
                :
              </p>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                  >
                    <span
                      class="bp3-editable-text-content"
                      style="height: 1px; line-height: 1px; min-width: 0;"
                    >
                      Environment_101
                    </span>
                  </div>
                </span>
              </span>
            </div>
            <div
              class="bp3-form-group"
            >
              <label
                class="bp3-label"
                for="name"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="deployEnv_name"
                >
                  name
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="name"
                    type="text"
                    value="Environment 102"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <label
              class="Label--main bp3-label descriptionLabel"
            >
              optionalField
              <span
                class="bp3-icon StyledProps--main editOpen"
                data-icon="Edit"
                data-name="edit"
                data-testid="description-edit"
              >
                <svg
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                    fill="currentColor"
                    fill-rule="evenodd"
                    opacity="0.3"
                  />
                </svg>
              </span>
            </label>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <label
              class="Label--main bp3-label descriptionLabel"
            >
              optionalField
            </label>
            <div
              class="bp3-form-group"
            >
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input bp3-tag-input"
                >
                  <div
                    class="bp3-tag-input-values"
                  >
                    <span
                      class="bp3-tag"
                      data-tag-index="0"
                    >
                      <span
                        class="bp3-text-overflow-ellipsis bp3-fill"
                      >
                        tag1
                      </span>
                      <button
                        class="bp3-tag-remove"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-small-cross"
                          icon="small-cross"
                        >
                          <svg
                            data-icon="small-cross"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              small-cross
                            </desc>
                            <path
                              d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                    <span
                      class="bp3-tag"
                      data-tag-index="1"
                    >
                      <span
                        class="bp3-text-overflow-ellipsis bp3-fill"
                      >
                        tag2
                      </span>
                      <button
                        class="bp3-tag-remove"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-small-cross"
                          icon="small-cross"
                        >
                          <svg
                            data-icon="small-cross"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              small-cross
                            </desc>
                            <path
                              d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                    <input
                      class="bp3-input-ghost"
                      data-mentions="kv-tag-input-tags"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
        >
          <label
            class="Label--main"
            style="font-size: 13px; font-weight: normal;"
          >
            envType
          </label>
          <div
            class="bp3-form-group ThumbnailSelect--mainContainer"
          >
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
              >
                <label
                  class="Thumbnail--squareCardContainer Thumbnail--bigger"
                >
                  <div
                    class="bp3-card bp3-elevation-0 Card--card Thumbnail--squareCard Card--selected"
                  >
                    <span
                      class="Card--corner"
                    >
                      <span
                        class="Card--badge"
                      />
                      <span
                        class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                        data-icon="main-tick"
                      >
                        <svg
                          height="10"
                          viewBox="0 0 11 8"
                          width="10"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.219.894c.356-.38.982-.413 1.398-.072.391.32.457.857.167 1.236l-.06.07-5.138 5.486c-.362.386-.993.41-1.403.068l-.07-.064-3.2-3.214A.88.88 0 01.95 3.098a1.045 1.045 0 011.328-.003l.074.067 2.443 2.454L9.22.894z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </span>
                    <p
                      class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--color StyledProps--color-black"
                    >
                      production
                    </p>
                  </div>
                  <input
                    checked=""
                    name="type"
                    type="checkbox"
                    value="Production"
                  />
                </label>
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main ThumbnailSelect--changeButton StyledProps--intent-primary Button--without-shadow Button--withLeftIcon"
                  data-testid="thumbnail-select-change"
                  type="button"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                    data-icon="Edit"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                        fill="currentColor"
                        fill-rule="evenodd"
                        opacity="0.3"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    Change
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-top-xlarge"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
            data-id="environment-save"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              save
            </span>
          </button>
             
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              cancel
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test should validate save 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="StyledProps--font StyledProps--main main"
        >
          <div
            class="InputWithIdentifier--txtNameContainer TextInput--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
            >
              <div
                class="Text--withDocsTooltip"
                data-tooltip-id="universalInputNameWithId"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  Id
                </p>
              </div>
              <p
                class="StyledProps--font StyledProps--main"
              >
                :
              </p>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="bp3-editable-text InputWithIdentifier--idValue"
                    tabindex="0"
                  >
                    <span
                      class="bp3-editable-text-content"
                      style="height: 1px; line-height: 1px; min-width: 0;"
                    >
                      New_Environment
                    </span>
                  </div>
                </span>
              </span>
              <span
                class="bp3-icon StyledProps--main"
                data-icon="Edit"
                style="vertical-align: middle; cursor: pointer;"
              >
                <svg
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                    fill="currentColor"
                    fill-rule="evenodd"
                    opacity="0.3"
                  />
                </svg>
              </span>
            </div>
            <div
              class="bp3-form-group"
            >
              <label
                class="bp3-label"
                for="name"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="deployEnv_name"
                >
                  name
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="name"
                    type="text"
                    value="New Environment"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <label
              class="Label--main bp3-label descriptionLabel"
            >
              optionalField
              <span
                class="bp3-icon StyledProps--main editOpen"
                data-icon="Edit"
                data-name="edit"
                data-testid="description-edit"
              >
                <svg
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                    fill="currentColor"
                    fill-rule="evenodd"
                    opacity="0.3"
                  />
                </svg>
              </span>
            </label>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <label
              class="Label--main bp3-label descriptionLabel"
            >
              optionalField
              <span
                class="bp3-icon StyledProps--main editOpen"
                data-icon="Edit"
                data-name="edit"
                data-testid="tags-edit"
              >
                <svg
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                    fill="currentColor"
                    fill-rule="evenodd"
                    opacity="0.3"
                  />
                </svg>
              </span>
            </label>
          </div>
        </div>
        <div
          class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
        >
          <label
            class="Label--main"
            style="font-size: 13px; font-weight: normal;"
          >
            envType
          </label>
          <div
            class="bp3-form-group ThumbnailSelect--mainContainer"
          >
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
              >
                <label
                  class="Thumbnail--squareCardContainer Thumbnail--bigger"
                >
                  <div
                    class="bp3-card bp3-elevation-0 Card--card Thumbnail--squareCard Card--selected"
                  >
                    <span
                      class="Card--corner"
                    >
                      <span
                        class="Card--badge"
                      />
                      <span
                        class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                        data-icon="main-tick"
                      >
                        <svg
                          height="10"
                          viewBox="0 0 11 8"
                          width="10"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.219.894c.356-.38.982-.413 1.398-.072.391.32.457.857.167 1.236l-.06.07-5.138 5.486c-.362.386-.993.41-1.403.068l-.07-.064-3.2-3.214A.88.88 0 01.95 3.098a1.045 1.045 0 011.328-.003l.074.067 2.443 2.454L9.22.894z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </span>
                    <p
                      class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--color StyledProps--color-black"
                    >
                      production
                    </p>
                  </div>
                  <input
                    name="type"
                    type="checkbox"
                    value="Production"
                  />
                </label>
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main ThumbnailSelect--changeButton StyledProps--intent-primary Button--without-shadow Button--withLeftIcon"
                  data-testid="thumbnail-select-change"
                  type="button"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                    data-icon="Edit"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                        fill="currentColor"
                        fill-rule="evenodd"
                        opacity="0.3"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    Change
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-top-xlarge"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
            data-id="environment-save"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              save
            </span>
          </button>
             
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              cancel
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test validation are present if submited with empty value  1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main"
  >
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          class="StyledProps--font StyledProps--main main"
        >
          <div
            class="InputWithIdentifier--txtNameContainer TextInput--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
            >
              <div
                class="Text--withDocsTooltip"
                data-tooltip-id="universalInputNameWithId"
              >
                <p
                  class="StyledProps--font StyledProps--main"
                >
                  Id
                </p>
              </div>
              <p
                class="StyledProps--font StyledProps--main"
              >
                :
              </p>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="bp3-editable-text InputWithIdentifier--idValue"
                    tabindex="0"
                  >
                    <span
                      class="bp3-editable-text-content"
                      style="height: 1px; line-height: 1px; min-width: 0;"
                    >
                      Environment_102
                    </span>
                  </div>
                </span>
              </span>
              <span
                class="bp3-icon StyledProps--main"
                data-icon="Edit"
                style="vertical-align: middle; cursor: pointer;"
              >
                <svg
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                    fill="currentColor"
                    fill-rule="evenodd"
                    opacity="0.3"
                  />
                </svg>
              </span>
            </div>
            <div
              class="bp3-form-group"
            >
              <label
                class="bp3-label"
                for="name"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="deployEnv_name"
                >
                  name
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="name"
                    type="text"
                    value="Environment 102"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <label
              class="Label--main bp3-label descriptionLabel"
            >
              optionalField
              <span
                class="bp3-icon StyledProps--main editOpen"
                data-icon="Edit"
                data-name="edit"
                data-testid="description-edit"
              >
                <svg
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                    fill="currentColor"
                    fill-rule="evenodd"
                    opacity="0.3"
                  />
                </svg>
              </span>
            </label>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <label
              class="Label--main bp3-label descriptionLabel"
            >
              optionalField
              <span
                class="bp3-icon StyledProps--main editOpen"
                data-icon="Edit"
                data-name="edit"
                data-testid="tags-edit"
              >
                <svg
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                    fill="currentColor"
                    fill-rule="evenodd"
                    opacity="0.3"
                  />
                </svg>
              </span>
            </label>
          </div>
        </div>
        <div
          class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
        >
          <label
            class="Label--main"
            style="font-size: 13px; font-weight: normal;"
          >
            envType
          </label>
          <div
            class="bp3-form-group ThumbnailSelect--mainContainer"
          >
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
              >
                <label
                  class="Thumbnail--squareCardContainer Thumbnail--bigger"
                >
                  <div
                    class="bp3-card bp3-elevation-0 Card--card Thumbnail--squareCard Card--selected"
                  >
                    <span
                      class="Card--corner"
                    >
                      <span
                        class="Card--badge"
                      />
                      <span
                        class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-white"
                        data-icon="main-tick"
                      >
                        <svg
                          height="10"
                          viewBox="0 0 11 8"
                          width="10"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M9.219.894c.356-.38.982-.413 1.398-.072.391.32.457.857.167 1.236l-.06.07-5.138 5.486c-.362.386-.993.41-1.403.068l-.07-.064-3.2-3.214A.88.88 0 01.95 3.098a1.045 1.045 0 011.328-.003l.074.067 2.443 2.454L9.22.894z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </span>
                    <p
                      class="StyledProps--font StyledProps--main Thumbnail--label StyledProps--color StyledProps--color-black"
                    >
                      production
                    </p>
                  </div>
                  <input
                    name="type"
                    type="checkbox"
                    value="Production"
                  />
                </label>
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main ThumbnailSelect--changeButton StyledProps--intent-primary Button--without-shadow Button--withLeftIcon"
                  data-testid="thumbnail-select-change"
                  type="button"
                >
                  <span
                    class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                    data-icon="Edit"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 16 16"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M11.207.485a.5.5 0 01.354-.146 3.5 3.5 0 013.5 3.5.5.5 0 01-.146.353l-11 11a.5.5 0 01-.354.147h-3a.5.5 0 01-.5-.5v-3a.5.5 0 01.146-.354l11-11zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 00-2.294-2.292z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M11.89 2.646a.5.5 0 010 .708L8.353 6.889a.5.5 0 01-.708-.707l3.536-3.536a.5.5 0 01.707 0z"
                        fill="currentColor"
                        fill-rule="evenodd"
                        opacity="0.3"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    Change
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="StyledProps--font StyledProps--main StyledProps--padding-top-xlarge"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
            data-id="environment-save"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              save
            </span>
          </button>
             
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              cancel
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
